@@ -22,17 +22,15 @@ import com.winterhavenmc.spawnstar.messages.Macro;
 import com.winterhavenmc.spawnstar.messages.MessageId;
 import com.winterhavenmc.spawnstar.sounds.SoundId;
 
-import org.bukkit.ChatColor;
 import org.bukkit.Location;
 import org.bukkit.World;
-import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.scheduler.BukkitTask;
 
 import java.util.*;
 
-import static com.winterhavenmc.util.TimeUnit.SECONDS;
+import static com.winterhavenmc.library.TimeUnit.SECONDS;
 
 
 /**
@@ -55,8 +53,8 @@ public final class TeleportHandler {
 	 *
 	 * @param plugin reference to plugin main class
 	 */
-	public TeleportHandler(final PluginMain plugin) {
-
+	public TeleportHandler(final PluginMain plugin)
+	{
 		// set reference to main class
 		this.plugin = plugin;
 
@@ -240,7 +238,7 @@ public final class TeleportHandler {
 
 		// if only one normal world exists, return that world
 		if (normalWorlds.size() == 1) {
-			return Optional.of(normalWorlds.get(0).getSpawnLocation());
+			return Optional.of(normalWorlds.getFirst().getSpawnLocation());
 		}
 
 		// if no matching normal world found and more than one normal world exists, return passed world spawn location
@@ -300,16 +298,16 @@ public final class TeleportHandler {
 	 *
 	 * @param player the player being logged using a SpawnStar item
 	 */
-	private void logUsage(final Player player) {
-		if (plugin.getConfig().getBoolean("log-use")) {
-
-			// get console command sender
-			CommandSender console = plugin.getServer().getConsoleSender();
-
-			// write message to log
-			console.sendMessage(player.getName() + ChatColor.RESET + " used a "
-					+ plugin.messageBuilder.getItemName() + ChatColor.RESET + " in "
-					+ plugin.worldManager.getWorldName(player) + ChatColor.RESET + ".");
+	private void logUsage(final Player player)
+	{
+		// if log-use is enabled in config, write log entry
+		if (plugin.getConfig().getBoolean("log-use"))
+		{
+			// send message to console
+			plugin.messageBuilder.compose(plugin.getServer().getConsoleSender(), MessageId.TELEPORT_LOG_USAGE)
+					.setMacro(Macro.TARGET_PLAYER, player)
+					.setMacro(Macro.DESTINATION_WORLD, plugin.worldManager.getAliasOrName(player.getWorld().getName()))
+					.send();
 		}
 	}
 
